--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
     "build": "webpack --config webpack.config.babel.js",
     "rollup": "rollup src/index.js -f umd -n VueFusionCharts -g fusioncharts:FusionCharts -o dist/vue-fusioncharts.js",
     "watch": "webpack --config webpack.config.babel.js -w",
-    "dev": "webpack-dev-server --config example/webpack.config.js",
-    "start": "webpack-dev-server --config example/webpack.config.js"
+    "dev": "webpack-dev-server --config example/webpack.config.js --port 8280",
+    "start": "webpack-dev-server --config example/webpack.config.js --port 8280"
   },
   "license": "MIT",
   "devDependencies": {
@@ -47,18 +47,20 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
     "chai": "^3.5.0",
+    "chokidar": "^3.5.2",
     "eslint": "^3.19.0",
-    "eslint-loader": "^2.0.0",
-    "lodash": "^4.17.11",
+    "eslint-loader": "^2.2.1",
+    "lodash": "^4.17.21",
     "mocha": "^5.2.0",
     "rollup-plugin-commonjs": "^8.0.2",
-    "rollup-plugin-node-resolve": "^3.0.0",
-    "vue": "^2.3.3",
+    "rollup-plugin-node-resolve": "^3.4.0",
+    "rollup": "^1.27.13",
+    "vue": "^2.6.14",
     "webpack": "^2.5.1",
-    "webpack-dev-server": "^2.4.5",
+    "webpack-dev-server": "^2.11.5",
     "yards": "^0.1.4"
   },
   "dependencies": {
-    "underscore": "^1.9.1"
+    "underscore": "^1.13.1"
   }
 }
